<resources>
	<string name="app_name">Test</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="title_activity_add_student">AddStudent</string>
	<!-- Strings used for fragments for navigation -->
	<string name="first_fragment_label">First Fragment</string>
	<string name="second_fragment_label">Second Fragment</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>

	<string name="hello_first_fragment">Hello first fragment</string>
	<string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
	<string name="add_student">ADD STUDENT</string>
	<string name="add_test">ADD TEST</string>
	<string name="enter_email">Enter email</string>
	<string name="email">Email</string>
	<string name="enter_class">Enter class</string>
	<string name="_class">Class</string>
	<string name="enter_name">Enter name</string>
	<string name="name">Name</string>
	<string name="max_mark">Maximum marks</string>
	<string name="topic">Topic</string>
	<string name="subject">Subject</string>
	<string name="enter_subject">Enter Subject</string>
	<string name="enter_topic">Enter topic</string>
	<string name="enter_max_mark">Enter max mark</string>
	<string name="date">Date</string>
	<string name="data_not_found">Data Not Found</string>
	<string name="description">description</string>
    <string name="enter_marks">Enter marks</string>
	<string name="update">Update</string>
</resources>