<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">


	<LinearLayout

		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		tools:context=".activity.AddTest">

		<com.google.android.material.appbar.AppBarLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:theme="@style/Theme.Test.AppBarOverlay">

			<androidx.appcompat.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				android:background="?attr/colorPrimary"
				app:popupTheme="@style/Theme.Test.PopupOverlay" >
				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent">
					<ImageButton
						android:id="@+id/imgBack"
						android:src="@drawable/ic_arrow_back"
						android:layout_centerVertical="true"
						android:background="@color/colorPrimary"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"/>
					<TextView
						android:layout_width="wrap_content"
						android:layout_centerInParent="true"
						android:text="@string/add_test"
						android:textSize="18sp"
						android:textStyle="bold"
						android:layout_height="wrap_content"/>

				</RelativeLayout>


			</androidx.appcompat.widget.Toolbar>

		</com.google.android.material.appbar.AppBarLayout>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="20dp"
			android:layout_marginTop="15dp"
			android:text="Class"
			android:textSize="18sp"
			android:textColor="#000000"
			android:textStyle="bold"
			/>


		<EditText
			android:id="@+id/edt_class"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="15dp"
			android:layout_marginTop="5dp"
			android:inputType="text"
			android:hint="@string/enter_class"
			android:background="@drawable/rounded_input_field" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="20dp"
			android:layout_marginTop="15dp"
			android:text="@string/date"
			android:textSize="18sp"
			android:textColor="#000000"
			android:textStyle="bold"
			/>


		<EditText
			android:id="@+id/edt_date"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="15dp"
			android:layout_marginTop="5dp"
			android:inputType="date"

			android:hint="@string/enter_subject"
			android:background="@drawable/rounded_input_field" />


		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="20dp"
			android:layout_marginTop="15dp"
			android:text="@string/subject"
			android:textSize="18sp"
			android:textColor="#000000"
			android:textStyle="bold"
			/>

		<EditText
			android:id="@+id/edt_subject"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="15dp"
			android:layout_marginTop="5dp"
			android:hint="@string/enter_subject"
			android:background="@drawable/rounded_input_field" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="20dp"
			android:layout_marginTop="15dp"
			android:text="@string/topic"
			android:textSize="18sp"
			android:textColor="#000000"
			android:textStyle="bold"
			/>
		<EditText
			android:id="@+id/edt_topic"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="15dp"
			android:layout_marginTop="5dp"
			android:hint="@string/enter_topic"
			android:background="@drawable/rounded_input_field" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="20dp"
			android:layout_marginTop="15dp"
			android:text="@string/max_mark"
			android:textSize="18sp"
			android:textColor="#000000"
			android:textStyle="bold"
			/>

		<EditText
			android:id="@+id/edt_marks"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="15dp"
			android:layout_marginTop="5dp"
			android:inputType="numberDecimal"
			android:maxLength="3"
			android:hint="@string/enter_max_mark"
			android:background="@drawable/rounded_input_field" />


		<Button
			android:id="@+id/btn_add"
			android:layout_marginHorizontal="20dp"
			android:layout_marginTop="20dp"
			android:background="@drawable/rounded_button"
			android:text ="@string/add_test"
			android:textColor="@color/white"
			android:textSize="16sp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>


	</LinearLayout>
</layout>
